a very dummy scrapper

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A web scrapper to convert website to a string",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Victor Korir <victorkorir.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
