--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A web scrapper to convert website to a string",
   "main": "server.js",
+  "engines": {
+    "node": "10.3.0",
+    "npm": "6.1.0"
+  },
   "scripts": {
     "start": "node server.js"
   },
